@@ -1,3 +1,9 @@
+2005-03-18  Mark McLoughlin  <markmc@redhat.com>
+
+	* sabayon.spec.in: go back to using shadow-utils instead
+	of fedora-usermgmt as there doesn't actually seem to be
+	consensus around using fedora-usermgmt.
+
 2005-03-17  John Dennis  <jdennis@redhat.com>
 
 	* remove redundant pref file writing method, fix use of
